feat: filter metrics by net name
